# Gemini-Live-API-Demo

./: .gitignore  LICENSE  NOTICE  README.md  main.py  pyproject.toml
intro_multimodal_live_api_genai_sdk/: README.md  intro_multimodal_live_api_genai_sdk.ipynb
notebook/: test_gemini_native_api.ipynb
project-liveapidemo/: LICENSE  NOTICE  README.md
project-liveapidemo/client/: index.html  mobile.html
project-liveapidemo/client/src/api/: gemini-api.js
project-liveapidemo/client/styles/: mobile-style.css  style.css
project-liveapidemo/docs/: local_setup.md
project-liveapidemo/server/: .env.example  requirements.txt  server.py
project-liveapidemo/server/config/: config.py  system-instructions.txt
project-liveapidemo/server/core/: gemini_client.py  session.py  websocket_handler.py
project-livewire/: README.md
project-livewire/client/: index.html  mobile.html
project-livewire/client/src/api/: gemini-api.js
project-livewire/server/config/: config.py
project-livewire/server/core/: gemini_client.py  websocket_handler.py
test_gemini_native_api/: README.md  test_gemini_native_api.ipynb
websocket-demo-app/: README.md
websocket-demo-app/backend/: main.py
websocket-demo-app/frontend/: gemini-live-api.js  index.html  script.js
