[project]
name = "gemini-live-api-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "google-cloud-secret-manager>=2.24.0",
    "google-genai>=1.26.0",
    "ipykernel>=6.30.0",
    "numpy>=2.3.1",
    "websockets==14.2",
]
