[project]
name = "gemini-live-api-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncio>=3.4.3",
    "certifi>=2025.7.14",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-secret-manager>=2.24.0",
    "google-genai>=1.26.0",
    "ipykernel>=6.30.0",
    "numpy>=2.3.1",
    "requests>=2.32.4",
    "websockets==14.2",
]
